--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,4 +3,5 @@
     <item type="id" name="button_save" />
     <item type="id" name="button_delete" />
     <item type="id" name="edit_name" />
+    <item type="id" name="action_new" />
 </resources>
