--- a/app/src/main/res/layout/activity_market_edit.xml
+++ b/app/src/main/res/layout/activity_market_edit.xml
@@ -3,37 +3,22 @@
     android:layout_height="match_parent"
     android:padding="10dp" >
 
-    <Button
-        android:id="@id/button_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:enabled="false" />
-
-    <Button
-        android:id="@id/button_delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@id/button_save" />
-
     <TextView
         android:id="@+id/edit_market_name_label"
-        android:text="@string/editLabel_market_name"
-        android:layout_marginTop="10dp"
+        style="@android:style/TextAppearance.Large"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@id/button_save"
-        style="@android:style/TextAppearance.Large" />
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
+        android:text="@string/editLabel_market_name" />
 
     <EditText
         android:id="@id/edit_name"
+        style="@android:style/TextAppearance.Large"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        style="@android:style/TextAppearance.Large"
-        android:singleLine="true"
-        android:layout_below="@id/edit_market_name_label" />
+        android:layout_below="@id/edit_market_name_label"
+        android:singleLine="true" />
 </RelativeLayout>
