--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item type="id" name="button_save" />
-    <item type="id" name="button_delete" />
-    <item type="id" name="edit_name" />
-    <item type="id" name="action_new" />
+    <item name="button_save" type="id" />
+    <item name="button_delete" type="id" />
+    <item name="edit_name" type="id" />
+    <item name="action_new" type="id" />
 </resources>
