--- a/app/src/main/res/menu/menu_market_list.xml
+++ b/app/src/main/res/menu/menu_market_list.xml
@@ -4,6 +4,7 @@
 
     <item
         android:id="@id/action_new"
+        android:icon="@drawable/ic_action_new"
         android:orderInCategory="100"
-        android:showAsAction="ifRoom" />
+        android:showAsAction="always|withText" />
 </menu>
