--- a/app/src/main/res/menu/menu_product_edit.xml
+++ b/app/src/main/res/menu/menu_product_edit.xml
@@ -4,11 +4,13 @@
 
     <item
         android:id="@id/button_save"
+        android:icon="@drawable/ic_action_accept"
         android:orderInCategory="100"
-        android:showAsAction="always" />
+        android:showAsAction="always|withText" />
 
     <item
         android:id="@id/button_delete"
+        android:icon="@drawable/ic_action_discard"
         android:orderInCategory="101"
-        android:showAsAction="never" />
+        android:showAsAction="always|withText" />
 </menu>
