Started to work on item styling - now ugly but some tiny steps

--- a/app/src/main/res/layout/editable_list_item.xml
+++ b/app/src/main/res/layout/editable_list_item.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:attr/activatedBackgroundIndicator"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="10dp"
+    android:background="@android:drawable/dialog_holo_light_frame"
     android:gravity="center_vertical"
-    android:padding="10dp">
+    android:orientation="horizontal"
+    android:padding="20dp">
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/listitem_text"
         style="@android:style/TextAppearance.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true" />
+        android:layout_weight="1"
+        android:background="?android:attr/activatedBackgroundIndicator" />
 
     <ImageView
         android:id="@+id/listitem_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:background="?android:attr/activatedBackgroundIndicator"
         android:src="@drawable/ic_action_edit" />
 
-</RelativeLayout>
+</LinearLayout>
