--- a/app/src/main/res/layout/editable_list_item.xml
+++ b/app/src/main/res/layout/editable_list_item.xml
@@ -16,8 +16,7 @@
         style="@android:style/TextAppearance.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:background="?android:attr/activatedBackgroundIndicator" />
+        android:layout_weight="1" />
 
     <ImageView
         android:id="@+id/listitem_edit"
