Using shrinked icon as visual feedback for pressing the edit image

--- a/app/src/main/res/layout/editable_list_item.xml
+++ b/app/src/main/res/layout/editable_list_item.xml
@@ -22,7 +22,6 @@
         android:id="@+id/listitem_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="?android:attr/activatedBackgroundIndicator"
-        android:src="@drawable/ic_action_edit" />
+        android:src="@drawable/edit_indicator" />
 
 </LinearLayout>
