Should now have same functionality of WebApp - starting next reviews and first beta test cycle

--- a/app/src/main/res/menu/menu_market_edit.xml
+++ b/app/src/main/res/menu/menu_market_edit.xml
@@ -12,5 +12,5 @@
         android:id="@id/button_delete"
         android:icon="@drawable/ic_action_discard"
         android:orderInCategory="101"
-        android:showAsAction="always|withText" />
+        android:showAsAction="never|withText" />
 </menu>
