--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -2,4 +2,5 @@
 <de.jochen_manns.buyitv0.TouchableListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:choiceMode="none" />
+    android:choiceMode="none"
+    android:listSelector="@android:color/transparent" />
