Disable save icon; capitalize first letter of product / market name

--- a/app/src/main/res/layout/activity_product_edit.xml
+++ b/app/src/main/res/layout/activity_product_edit.xml
@@ -16,6 +16,7 @@
         style="@android:style/TextAppearance.Large"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textCapWords"
         android:singleLine="true" />
 
     <TextView
