--- a/app/src/main/res/layout/activity_market_edit.xml
+++ b/app/src/main/res/layout/activity_market_edit.xml
@@ -16,5 +16,6 @@
         style="@android:style/TextAppearance.Large"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textCapWords"
         android:singleLine="true" />
 </LinearLayout>
