--- a/app/src/main/res/layout/dialog_register_user.xml
+++ b/app/src/main/res/layout/dialog_register_user.xml
@@ -8,6 +8,7 @@
         style="@android:style/TextAppearance.Large"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="@string/dialog_register_label" />
 
     <EditText
@@ -15,6 +16,8 @@
         style="@android:style/TextAppearance.Large"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:hint="@string/dialog_register_hint"
+        android:inputType="textCapCharacters"
         android:singleLine="true" />
 </LinearLayout>
