--- a/app/src/main/res/layout/activity_market_edit.xml
+++ b/app/src/main/res/layout/activity_market_edit.xml
@@ -16,6 +16,7 @@
         style="@android:style/TextAppearance.Large"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:inputType="textCapWords"
         android:singleLine="true" />
 </LinearLayout>
