--- a/app/src/main/res/menu/menu_market_edit.xml
+++ b/app/src/main/res/menu/menu_market_edit.xml
@@ -1,15 +1,14 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MarketList">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@id/button_save"
+        android:id="@id/action_save"
         android:orderInCategory="100"
         android:showAsAction="always|withText" />
 
     <item
-        android:id="@id/button_delete"
+        android:id="@id/action_delete"
         android:icon="@drawable/ic_action_discard"
         android:orderInCategory="101"
-        android:showAsAction="never|withText" />
+        android:showAsAction="never|withText"
+        android:title="@string/action_delete" />
 </menu>
