Using smaller font; feedback on synchronisation added

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,4 +2,5 @@
 
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar"></style>
 
+    <style name="TextStyle" parent="android:style/TextAppearance.Medium"></style>
 </resources>
