--- a/app/src/main/res/layout/activity_market_edit.xml
+++ b/app/src/main/res/layout/activity_market_edit.xml
@@ -5,7 +5,7 @@
     android:padding="10dp">
 
     <TextView
-        style="@android:style/TextAppearance.Large"
+        style="@style/TextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -13,7 +13,7 @@
 
     <EditText
         android:id="@id/edit_name"
-        style="@android:style/TextAppearance.Large"
+        style="@style/TextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
