--- a/app/src/main/res/layout/activity_product_edit.xml
+++ b/app/src/main/res/layout/activity_product_edit.xml
@@ -5,7 +5,7 @@
     android:padding="10dp">
 
     <TextView
-        style="@android:style/TextAppearance.Large"
+        style="@style/TextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -13,7 +13,7 @@
 
     <EditText
         android:id="@id/edit_name"
-        style="@android:style/TextAppearance.Large"
+        style="@style/TextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -21,7 +21,7 @@
         android:singleLine="true" />
 
     <TextView
-        style="@android:style/TextAppearance.Large"
+        style="@style/TextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -29,7 +29,7 @@
 
     <TextView
         android:id="@+id/edit_product_market"
-        style="@android:style/TextAppearance.Large"
+        style="@style/TextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -37,7 +37,7 @@
         android:padding="20dp" />
 
     <TextView
-        style="@android:style/TextAppearance.Large"
+        style="@style/TextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -45,7 +45,7 @@
 
     <EditText
         android:id="@+id/edit_product_description"
-        style="@android:style/TextAppearance.Large"
+        style="@style/TextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp" />
