--- a/app/src/main/res/layout/editable_list_item.xml
+++ b/app/src/main/res/layout/editable_list_item.xml
@@ -13,7 +13,7 @@
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/listitem_text"
-        style="@android:style/TextAppearance.Large"
+        style="@style/TextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
