Partial change date selector to use german.

--- a/app/src/main/res/layout/activity_product_edit.xml
+++ b/app/src/main/res/layout/activity_product_edit.xml
@@ -67,6 +67,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:textAlignment="center"
             style="@style/TextStyle"
             android:enabled="false"
         />
@@ -90,6 +91,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:textAlignment="center"
             style="@style/TextStyle"
             android:enabled="false"
             />
