--- a/app/src/main/res/layout/activity_product_edit.xml
+++ b/app/src/main/res/layout/activity_product_edit.xml
@@ -39,6 +39,36 @@
         android:background="@android:drawable/dialog_holo_light_frame"
         android:padding="20dp" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp" >
+
+        <TextView
+            style="@style/TextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/editLabel_item_category" />
+
+        <EditText
+            android:id="@+id/edit_product_category"
+            style="@style/TextStyle"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:inputType="textCapWords"
+            android:singleLine="true" />
+
+        <ImageView
+            android:id="@+id/edit_product_category_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/ic_action_category" />
+    </LinearLayout>
+
     <Switch
         android:id="@+id/edit_product_permanent"
         style="@style/TextStyle"
@@ -101,7 +131,7 @@
         style="@style/TextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="40dp"
         android:text="@string/editLabel_item_description" />
 
     <EditText
