--- a/app/src/main/res/layout/editable_list_item.xml
+++ b/app/src/main/res/layout/editable_list_item.xml
@@ -11,6 +11,12 @@
     android:orientation="horizontal"
     android:padding="20dp">
 
+    <TextView
+        android:id="@+id/listitem_from"
+        style="@style/TextStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/listitem_text"
         style="@style/TextStyle"
