--- a/app/src/main/res/drawable/edit_selected.xml
+++ b/app/src/main/res/drawable/edit_selected.xml
@@ -5,4 +5,5 @@
     android:insetBottom="5dp"
     android:insetLeft="5dp"
     android:insetRight="5dp"
-    android:insetTop="5dp" />
+    android:insetTop="5dp"
+    />
