Adapt layout to android 15 (SDK 35) to avoid loosing data under the title bar.

--- a/app/src/main/res/layout/activity_product_edit.xml
+++ b/app/src/main/res/layout/activity_product_edit.xml
@@ -3,7 +3,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="10dp"
-    android:scrollbars="vertical">
+    android:scrollbars="vertical"
+    android:id="@+id/product_root">
 
     <TextView
         style="@style/TextStyle"
