--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -4,4 +4,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:choiceMode="none"
-    android:listSelector="@android:color/transparent" />
+    android:id="@+id/list_root" />
